Fixed Java version build issue.